# dem_scm_calibration_scripts

./: .gitignore  README.md
Demos/DEM_demos/: CMakeLists.txt  demo_GPU_Annulus_shear_m100.cpp  demo_GPU_Annulus_shear_m125.cpp  demo_GPU_Annulus_shear_m150.cpp  demo_GPU_Annulus_shear_m175.cpp  demo_GPU_Annulus_shear_m200.cpp  demo_GPU_Annulus_shear_m25.cpp  demo_GPU_Annulus_shear_m50.cpp  demo_GPU_Annulus_shear_m75.cpp  demo_GPU_Rover_slip0.0.cpp  demo_GPU_Rover_slip0.1.cpp  demo_GPU_Rover_slip0.2.cpp  demo_GPU_Rover_slip0.3.cpp  demo_GPU_Rover_slip0.4.cpp  demo_GPU_Rover_slip0.5.cpp  demo_GPU_Rover_slip0.6.cpp  demo_GPU_Rover_slip0.7.cpp  demo_GPU_Rover_slip0.8.cpp  demo_GPU_Rover_slip=0.0.cpp  demo_GPU_Rover_slip=0.2.cpp  demo_GPU_Rover_slip=0.3.cpp  demo_GPU_Rover_slip=0.6.cpp  demo_GPU_Singlewheel_Test_slip0.0Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.0Rover.cpp  demo_GPU_Singlewheel_Test_slip0.1Cylinder.cpp  demo_GPU_Singlewheel_Test_slip0.1Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.1Rover.cpp  demo_GPU_Singlewheel_Test_slip0.2Cylinder.cpp  demo_GPU_Singlewheel_Test_slip0.2Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.2Rover.cpp  demo_GPU_Singlewheel_Test_slip0.3Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.3Rover.cpp  demo_GPU_Singlewheel_Test_slip0.4Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.4Rover.cpp  demo_GPU_Singlewheel_Test_slip0.5Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.5Rover.cpp  demo_GPU_Singlewheel_Test_slip0.6Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.6Rover.cpp  demo_GPU_Singlewheel_Test_slip0.7Hmmwv.cpp  demo_GPU_Singlewheel_Test_slip0.7Rover.cpp  (+16 more)
Demos/SCM_demos/: Rover_test.py  Rover_test_slope_controlled.py  Singlewheel.py  Singlewheel_rigid.py
Demos/Shell/: copy_checkpoint_file.sh  simulation.sh  terrain.sh
Demos/json file/: Annulus_shear_m100.json  Annulus_shear_m125.json  Annulus_shear_m150.json  Annulus_shear_m175.json  Annulus_shear_m200.json  Annulus_shear_m25.json  Annulus_shear_m50.json  Annulus_shear_m75.json  Rover_slip0.2.json  Rover_slip0.3.json  Rover_slip0.5.json  Rover_slip0.6.json  Rover_slip0.8.json  Rover_slip=0.0.json  Rover_slip=0.1.json  Rover_slip=0.4.json  Rover_slip=0.7.json  Singlewheel_Test_slip0.0Cylinder.json  Singlewheel_Test_slip0.0Hmmwv.json  Singlewheel_Test_slip0.0Rover.json  Singlewheel_Test_slip0.1Cylinder.json  Singlewheel_Test_slip0.1Hmmwv.json  Singlewheel_Test_slip0.1Rover.json  Singlewheel_Test_slip0.2Hmmwv.json  Singlewheel_Test_slip0.2Rover.json  Singlewheel_Test_slip0.3Hmmwv.json  Singlewheel_Test_slip0.3Rover.json  Singlewheel_Test_slip0.4Cylinder.json  Singlewheel_Test_slip0.5Cylinder.json  Singlewheel_Test_slip0.6Cylinder.json  Singlewheel_Test_slip0.6Hmmwv.json  Singlewheel_Test_slip0.6Rover.json  Singlewheel_Test_slip0.7Cylinder.json  Singlewheel_Test_slip0.8Cylinder.json  Singlewheel_Test_slip=0.2(Cylinder).json  Singlewheel_Test_slip=0.3(Cylinder).json  Singlewheel_Test_slip=0.4(Hmmwv).json  Singlewheel_Test_slip=0.4(Rover).json  Singlewheel_Test_slip=0.5(Hmmwv).json  Singlewheel_Test_slip=0.5(Rover).json  (+10 more)
Demos/plt_demos/: Annulus.py  Annulus_parameter.py  DEM_Slope_Slip_Rover_Wheel.py  K_s.py  Rover_new.py  SCM_Slope_Slip_Rover_Wheel.py  Singlewheel_Test.py  Sinkage.py  Sinkage_parameter.py  plot.py
Figure/01_plot_plate_sinkage/: plate_selected_force_sinkage_points_dem.txt  plate_selected_force_sinkage_points_scm.txt
Figure/02_plot_annulus_shear/: annulus_max_torque_vs_load_dem_vs_scm.txt  annulus_selected_torque_points_for_each_load.txt
Figure/05_plot_rover/: DBP_Torque_vs_Slip_HMMWV_Wheel_CRM.txt  DBP_Torque_vs_Slip_HMMWV_Wheel_SCM.txt
